fixed horizontal scrolling glitch. Working on font-face

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,20 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@font-face {
+ font-family: 'trade_gothic_bold_condensed_no._20';
+ src: url('../fonts/trade_gothic_bold_condensed_no._20-webfont.eot');
+ src: url('../fonts/trade_gothic_bold_condensed_no._20-webfont.eot?#iefix') format('embedded-opentype'),
+ url('../fonts/trade_gothic_bold_condensed_no._20-webfont.woff.woff') format('woff'),
+ url('../fonts/trade_gothic_bold_condensed_no._20-webfont.ttf') format('truetype'),
+ url('../fonts/trade_gothic_bold_condensed_no._20-webfont.svg#trade_gothic_bold_condensed_no._20') format('svg');
+ font-weight: normal;
+ font-style: normal;
+}
+
+
+
+
 .invisible {
     visibility: hidden;
 }
@@ -108,6 +122,7 @@ body, html {
     height: 100%;
     min-height: 100%;
     background-color: blue;
+
 }
 
 /***********
@@ -157,7 +172,7 @@ nav {
 
 nav a {
     color: white;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 20px;
     font-weight: bold;
     /*font-style: italic;*/
@@ -236,6 +251,7 @@ main {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 /*.hsContent {
@@ -285,7 +301,7 @@ main {
     background-color: white;
     height: 500px;
     color: black;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 40px;
     font-weight: bold;
     padding-top: 2px;
@@ -342,7 +358,7 @@ NYC PAGE
     background-color: rgba(0,0,0,0.7);
     padding: 20px; 
     color: white;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 14px;
     font-weight: bold;
     width: 35%;
@@ -464,6 +480,8 @@ SYDNEY PAGE
     left: 0%;
     width: 100%;
     /*z-index: 5;*/
+
+
 }
 /***********
 STORY-3
@@ -474,7 +492,7 @@ STORY-3
     background-color: #00a8ff;
     height: 500px;
     color: white;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 40px;
     font-weight: bold;
     padding-top: 2px;
@@ -490,9 +508,9 @@ WORK PAGE
     padding: 25px;
     padding-bottom: 95px;
     padding-top: 80px;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     /*font-size: 60px;*/
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 #work h1 {
@@ -609,7 +627,7 @@ CONTACT PAGE
 }
 
 #shout {
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 60px;
     font-weight: bold;
     margin-bottom: 0px;
@@ -617,7 +635,7 @@ CONTACT PAGE
 }
 
 #other {
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
+    font-family: "trade_gothic_bold_condensed_no._20", "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, 'nexa_boldregular', "AppleGothic", sans-serif;
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 0px;
@@ -635,6 +653,17 @@ CONTACT PAGE
     display: inline-block;
     float: left;
     margin-right: 30px;
+}
+
+#contact-blurb a.email {
+    color: white;
+    font-size: 23px;
+    font-family: Georgia, sans-serif;
+    font-style: italic;
+    text-decoration: none;
+    margin: 0;
+    display: inline-block;
+    float: none; 
 }
 
 #contact-blurb a:hover {
